# DietTracker

./: CMakeLists.txt  DietTracker.sln  README.md
DietTracker/: AllTests.cpp  AllTests.h  CTException.h  CTString.cpp  CTString.h  Diet Tracker Command Specification.txt  DietCommand.cpp  DietCommand.h  DietStorage.cpp  DietStorage.h  DietSystem.cpp  DietSystem.h  DietTracker.cpp  DietTracker.vcxproj  DietTracker.vcxproj.filters  ReadMe.txt  Test.cpp  Test.h  Test_CTString.cpp  Test_CTString.h  Test_DietCommand.cpp  Test_DietCommand.h  Test_DietStorage.cpp  Test_DietStorage.h  Test_DietSystem.cpp  Test_DietSystem.h  stdafx.cpp
DietTracker/Settings/: Storage_Location.txt
DietTracker/Storage/: FoodDefines.txt  _test.food
